Adding auth route
