# index.js
@@ -3,6 +3,7 @@ const express = require('express')
 const connection = require("./config/db")
 const users = require('./routes/users')
 const stations = require('./routes/stations')
+const auth = require('./routes/auth')
 const reviews = require('./routes/reviews')
 const chargepoints = require('./routes/chargepoints')
 const reservations = require('./routes/reservations')
@@ -21,7 +22,7 @@ app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.use(express.json());
 
-app.use("/api", [users, stations,reviews,chargepoints,reservations]);
+app.use("/api", [auth, users, stations,reviews,chargepoints,reservations]);
 
 app.get('/', (req, res) => {
   res.json({ test: 'Hello Naiim!'})
